--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="pastel_blue_200">#FFBBE6FD</color>
+    <color name="pastel_blue_500">#FF42A5F5</color>
+    <color name="pastel_blue_700">#FF0077C2</color>
+    <color name="pastel_peach_200">#FFFFDAB9</color>
+    <color name="pastel_peach_500">#FFFFB6C1</color>
+    <color name="pastel_peach_700">#FFFFA07A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
